FlipFlap: Add the option of making it a rectangular window
Change-Id: I911af44c77cd8ca9e5f139c8760d29c449133332

--- a/res/layout/window_view.xml
+++ b/res/layout/window_view.xml
@@ -23,8 +23,8 @@
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal|top">
 
-    <org.lineageos.flipflap.CircleBatteryView
-        android:id="@+id/circle_battery"
+    <org.lineageos.flipflap.WindowBatteryView
+        android:id="@+id/window_battery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|top" />
