--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,7 +19,7 @@
 -->
 
 <resources>
-    <color name="circle_background">#002B24</color>
+    <color name="window_background">#002B24</color>
     <color name="full_bat_bg">#01487f</color> <!-- blue-->
     <color name="low_bat_bg">#841515</color> <!-- red-->
     <color name="charge_bat_bg">#ffc107</color> <!-- yellow-->
